UI Components, Symbol: Fixing Disabled Contrast #27290

--- a/templates/default/less/variables.less
+++ b/templates/default/less/variables.less
@@ -785,7 +785,7 @@
 //** Standard filter for the outlined icons to be used if disabled (rendering them with a grey outline).
 @il-standard-disabled-icon-filter: grayscale(100%);
 //** Standard filter for the outlined icons to be used if disabled (rendering them with a grey outline).
-@il-standard-outlined-disabled-icon-filter: brightness(0.3);
+@il-standard-outlined-disabled-icon-filter: contrast(0%);
 
 //== View Control
 //
